# Pay-Agent

./: .gitignore  CHANGES.md  README.md  agent.py  cli.py  llm.py  logger.py  prompts.py  pyproject.toml  state.py  tools.py  validators.py  verifier.py
docs/: design.md
eval/: judge.py  runner.py  scenarios.py
tests/: test_agent.py  test_llm.py  test_regression.py  test_state.py  test_tools.py  test_validators.py  test_verifier.py
