[project]
name = "pay-agent"
version = "0.1.0"
description = "Conversational AI agent for payment collection"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.9.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
